# ai-news-aggregator

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  main.py  pyproject.toml  render.yaml
.github/workflows/: cron.yml
db/: __init__.py  connection.py  news_item.py  repository.py
docs/: DATABASE_SETUP.md  EMAIL_SETUP.md
scrapers/: anthropic_scraper.py  openai_scraper.py  youtube.py
scripts/: check_db.py
services/: config.py  email_service.py  runner.py
